--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,18 @@ input[type=number] {
   padding-bottom: 1px;
   border-radius: 5px;
 }
+.overlay{
+  background: rgba(0, 0, 0, 0.3);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+}
+.hover-pointer:hover{
+  cursor:pointer;
+}
